components/observability/jaeger/jaeger.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jaeger
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
