components/observability/jaeger/cilium-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jaeger
  namespace: jaeger
spec:
  endpointSelector: {}
  ingress:
    # Query UI from Traefik and cluster clients
    - fromEntities:
        - cluster
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "16686"
              protocol: TCP
            - port: "16685"
              protocol: TCP
    # Trace ingestion from cluster services (OTLP gRPC/HTTP, Jaeger Thrift, Zipkin)
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "4317"
              protocol: TCP
            - port: "4318"
              protocol: TCP
            - port: "14250"
              protocol: TCP
            - port: "14268"
              protocol: TCP
            - port: "9411"
              protocol: TCP
            - port: "6831"
              protocol: UDP
            - port: "5778"
              protocol: TCP
    # Admin and metrics scraping
    - fromEntities:
        - cluster
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "14269"
              protocol: TCP
    # Health checks and probes
    - fromEntities:
        - host
        - remote-node
        - health
    # Intra-namespace communication
    - fromEndpoints:
        - {}
  egress:
    # DNS resolution
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
    # Kubernetes API Server
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    # Intra-namespace communication
    - toEndpoints:
        - {}
